projects/Always Sunny v1/always-sunny-picker-v1/worker01-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["always-sunny-picker-v1/worker01"]'
    management.cattle.io/ui-managed: "true"
  creationTimestamp: "2022-12-26T02:12:06Z"
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:field.cattle.io/targetWorkloadIds: {}
          f:management.cattle.io/ui-managed: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"0524ad62-2ea6-452a-bf87-afed188bf0b6"}: {}
      f:spec:
        f:internalTrafficPolicy: {}
        f:ports:
          .: {}
          k:{"port":3001,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: rancher
    operation: Update
    time: "2022-12-26T02:12:06Z"
  name: worker01
  namespace: always-sunny-picker-v1
  ownerReferences:
  - apiVersion: apps/v1
    controller: true
    kind: Deployment
    name: worker01
    uid: 0524ad62-2ea6-452a-bf87-afed188bf0b6
  resourceVersion: "757050"
  uid: 58441eec-dbff-4b27-9fe7-7434f7b1e9ad
spec:
  clusterIP: 10.245.128.31
  clusterIPs:
  - 10.245.128.31
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: default
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-always-sunny-picker-v1-worker01
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
