projects/Always Sunny v1/always-sunny-picker-v1/worker02-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["always-sunny-picker-v1/worker02"]'
    management.cattle.io/ui-managed: "true"
  creationTimestamp: "2022-12-25T14:46:01Z"
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:field.cattle.io/targetWorkloadIds: {}
          f:management.cattle.io/ui-managed: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"5696935e-520c-40ef-b8e1-7fa6362552b5"}: {}
      f:spec:
        f:internalTrafficPolicy: {}
        f:ports:
          .: {}
          k:{"port":3001,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: rancher
    operation: Update
    time: "2022-12-26T02:30:47Z"
  name: worker02
  namespace: always-sunny-picker-v1
  ownerReferences:
  - apiVersion: apps/v1
    controller: true
    kind: Deployment
    name: worker02
    uid: 5696935e-520c-40ef-b8e1-7fa6362552b5
  resourceVersion: "767179"
  uid: c368d8cd-e7ae-4959-97e1-db370d6009ec
spec:
  clusterIP: 10.245.124.167
  clusterIPs:
  - 10.245.124.167
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: default
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-always-sunny-picker-v1-worker02
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
